--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 onclick="showMessage()"> Hello, World! Hola, Mundo!</h1>
-
+    <h2> Welcome! Bienvenido! Wilkommen!</h2>
     <script src="./scripts.js"> </script>
 </body>
 </html>
