añadido de alert

--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-<<<<<<< HEAD
     <h1 onclick="showMessage()"> Hello, World! Hola, Mundo! Hallo, Welt!</h1>
-    <h2> Welcome! Bienvenido! Wilkommen!</h2>
+    <h2 onclick="showAlert()"> Welcome! Bienvenido! Wilkommen!</h2>
     <h2>Instructions. Instrucciones. Anweisungen.</h2>
     <p>Lorem ipsum dolor menstrual sit amet consectetur adipiscing elit sociis suscipit, nam praesent velit imperdiet et facilisi arcu massa natoque orci</p>
-
-=======
-    <h1 onclick="showMessage()"> Hello, World! Hola, Mundo!</h1>
-    <h2> Welcome! Bienvenido! Wilkommen!</h2>
->>>>>>> feature/wellcome
     <script src="./scripts.js"> </script>
 </body>
 </html>
