--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1 onclick="showMessage()"> Hello, World! Hola, Mundo! Hallo, Welt!</h1>
-    <h2 onclick="showAlert()"> Welcome! Bienvenido! Wilkommen!</h2>
-    <h2 onclick="showAlertInstructions">Instructions. Instrucciones. Anweisungen.</h2>
-    <p>Lorem ipsum dolor menstrual sit amet consectetur adipiscing elit sociis suscipit, nam praesent velit imperdiet et facilisi arcu massa natoque orci</p>
-
+    <h1 onclick="showMessage()">Hello world! Hola Mundo! Hallo welt!</h1>
+    <h2 onclick="showWelcome()">Welcome! Bienvenido! Willkommen!</h2>
+    <h2 onclick="showInstructions()">Instructions! Instrucciones! Anweisungen</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur molestiae debitis maiores a reiciendis doloribus, ratione laborum distinctio repellendus tempore expedita sit inventore, hic accusamus libero aut quidem aspernatur incidunt.</p>
+    <img src="https://static9.depositphotos.com/1007989/1157/i/950/depositphotos_11570449-stock-photo-proud-smiley.jpg" alt="" srcset="">
     <script src="./scripts.js"> </script>
 </body>
 </html>
