--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2 onclick="showWelcome()">Welcome! Bienvenido! Willkommen!</h2>
     <h2 onclick="showInstructions()">Instructions! Instrucciones! Anweisungen</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur molestiae debitis maiores a reiciendis doloribus, ratione laborum distinctio repellendus tempore expedita sit inventore, hic accusamus libero aut quidem aspernatur incidunt.</p>
-    <img src="https://static9.depositphotos.com/1007989/1157/i/950/depositphotos_11570449-stock-photo-proud-smiley.jpg" alt="" srcset="">
+    <img src="https://static9.depositphotos.com/1007989/1157/i/950/depositphotos_11570449-stock-photo-proud-smiley.jpg" height="42" width="42">
     <script src="./scripts.js"> </script>
 </body>
 </html>
